# TormentaEngine

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  install_linux_requirements.sh  install_mac_requirements.sh  vcpkg.json
.github/workflows/: linux_clang_build.yml  linux_gcc_build.yml  mac_clang_build.yml  windows_clang_build.yml  windows_msvc_build.yml
Src/: CMakeLists.txt
Src/Tormenta/: CMakeLists.txt
Src/Tormenta.Core/: CMakeLists.txt
Src/Tormenta.Editor.Standalone/: CMakeLists.txt  Main.cpp
Src/Tormenta.Editor.Standalone/Src/: Main.cpp
Src/Tormenta/Include/Tormenta/: Api.hpp
Src/Tormenta/Include/Tormenta/Containers/: String.hpp  UnorderedMap.hpp  UnorderedSet.hpp
Src/Tormenta/Include/Tormenta/Memory/: Allocator.hpp  MemoryProfiler.hpp  SmartPointer.hpp  StlAllocator.hpp
Src/Tormenta/Include/Tormenta/Memory/Allocators/: FreeListAllocator.hpp  MallocAllocator.hpp  TrackerAllocator.hpp
Src/Tormenta/Include/Tormenta/Memory/Pointers/: UniquePtr.hpp
Src/Tormenta/Include/Tormenta/String/: String.hpp
Src/Tormenta/Memory/: Allocator.cpp  CMakeLists.txt  MemoryProfiler.cpp
Src/Tormenta/Src/Containers/: String.cpp  UnorderedMap.cpp  UnorderedSet.cpp
Src/Tormenta/Src/Memory/: FreeListAllocator.cpp  MallocAllocator.cpp  StlAllocator.cpp  TrackerAllocator.cpp
Src/Tormenta/Src/Memory/Allocators/: FreeListAllocator.cpp  MallocAllocator.cpp  StlAllocator.cpp  TrackerAllocator.cpp
Src/Tormenta/String/: CMakeLists.txt  String.cpp
